--- a/main.ipynb
+++ b/main.ipynb
@@ -2,10 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-
    "execution_count": 16,
-
-
    "metadata": {},
    "outputs": [
     {
@@ -54,9 +51,7 @@
   },
   {
    "cell_type": "code",
-
    "execution_count": 17,
-
    "metadata": {},
    "outputs": [
     {
@@ -209,9 +204,7 @@
        "4         True  "
       ]
      },
-
      "execution_count": 17,
-
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,10 +220,7 @@
   },
   {
    "cell_type": "code",
-
-
    "execution_count": 72,
-
    "metadata": {},
    "outputs": [
     {
@@ -392,9 +382,7 @@
   },
   {
    "cell_type": "code",
-
    "execution_count": 19,
-
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +479,6 @@
   },
   {
    "cell_type": "code",
-
    "execution_count": 74,
    "metadata": {},
    "outputs": [
@@ -589,9 +576,7 @@
   },
   {
    "cell_type": "code",
-
    "execution_count": 21,
-
    "metadata": {},
    "outputs": [
     {
@@ -618,22 +603,18 @@
   },
   {
    "cell_type": "code",
-
    "execution_count": 22,
-
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-
       "[tensor([1.8000e+01, 1.0000e+00, 0.0000e+00, 1.0000e+00, 0.0000e+00, 0.0000e+00,\n",
       "        4.0000e+00, 0.0000e+00, 0.0000e+00, 0.0000e+00, 0.0000e+00, 0.0000e+00,\n",
       "        1.0000e+00, 0.0000e+00, 0.0000e+00, 0.0000e+00, 1.0000e+00, 1.0000e+00,\n",
       "        0.0000e+00, 0.0000e+00, 2.4051e-01, 0.0000e+00, 0.0000e+00, 4.3251e-04,\n",
       "        0.0000e+00, 1.7943e-01, 0.0000e+00], dtype=torch.float64), tensor([0], dtype=torch.int32)]\n"
-
      ]
     }
    ],
@@ -725,17 +706,13 @@
     "x=encoding(df_train)\n",
     "for i in range(len(x)):\n",
     "  train_data.append([torch.tensor(np.array(tuple(x[i]))), torch.tensor([df_train.iloc[i,13]])])\n",
-
     "print(train_data[0])\n",
-
     "#print(len(train_data))\n"
    ]
   },
   {
    "cell_type": "code",
-
    "execution_count": 77,
-
    "metadata": {},
    "outputs": [],
    "source": [
@@ -748,9 +725,7 @@
   },
   {
    "cell_type": "code",
-
    "execution_count": 78,
-
    "metadata": {},
    "outputs": [],
    "source": [
@@ -774,9 +749,7 @@
   },
   {
    "cell_type": "code",
-
    "execution_count": 79,
-
    "metadata": {},
    "outputs": [],
    "source": [
@@ -809,9 +782,7 @@
   },
   {
    "cell_type": "code",
-
    "execution_count": 80,
-
    "metadata": {},
    "outputs": [],
    "source": [
@@ -879,7 +850,6 @@
   },
   {
    "cell_type": "code",
-
    "execution_count": 81,
    "metadata": {},
    "outputs": [
@@ -897,30 +867,24 @@
    "source": [
     "model = Net(27, 100, 80, 100, 1)\n",
     "model(train_data[0][0])\n",
-
     "#train(network=network, train_data=A_train_data, test_data=A_test_data, test=False, iter_num=2)fd"
    ]
   },
   {
    "cell_type": "code",
-
    "execution_count": 82,
-
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-
       "epoch nr 0\n",
       "torch.Size([1]) torch.Size([1])\n"
-
      ]
     },
     {
      "ename": "RuntimeError",
-
      "evalue": "Found dtype Int but expected Double",
      "output_type": "error",
      "traceback": [
@@ -932,14 +896,11 @@
       "File \u001b[1;32mc:\\Users\\Lenovo\\anaconda3\\envs\\ML\\lib\\site-packages\\torch\\nn\\modules\\loss.py:619\u001b[0m, in \u001b[0;36mBCELoss.forward\u001b[1;34m(self, input, target)\u001b[0m\n\u001b[0;32m    618\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mforward\u001b[39m(\u001b[39mself\u001b[39m, \u001b[39minput\u001b[39m: Tensor, target: Tensor) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m Tensor:\n\u001b[1;32m--> 619\u001b[0m     \u001b[39mreturn\u001b[39;00m F\u001b[39m.\u001b[39;49mbinary_cross_entropy(\u001b[39minput\u001b[39;49m, target, weight\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mweight, reduction\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mreduction)\n",
       "File \u001b[1;32mc:\\Users\\Lenovo\\anaconda3\\envs\\ML\\lib\\site-packages\\torch\\nn\\functional.py:3095\u001b[0m, in \u001b[0;36mbinary_cross_entropy\u001b[1;34m(input, target, weight, size_average, reduce, reduction)\u001b[0m\n\u001b[0;32m   3092\u001b[0m     new_size \u001b[39m=\u001b[39m _infer_size(target\u001b[39m.\u001b[39msize(), weight\u001b[39m.\u001b[39msize())\n\u001b[0;32m   3093\u001b[0m     weight \u001b[39m=\u001b[39m weight\u001b[39m.\u001b[39mexpand(new_size)\n\u001b[1;32m-> 3095\u001b[0m \u001b[39mreturn\u001b[39;00m torch\u001b[39m.\u001b[39;49m_C\u001b[39m.\u001b[39;49m_nn\u001b[39m.\u001b[39;49mbinary_cross_entropy(\u001b[39minput\u001b[39;49m, target, weight, reduction_enum)\n",
       "\u001b[1;31mRuntimeError\u001b[0m: Found dtype Int but expected Double"
-
      ]
     }
    ],
    "source": [
-
     "train(model, train_data, test_data)"
-
    ]
   },
   {
@@ -966,7 +927,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.8 | packaged by conda-forge | (main, Nov  4 2022, 13:42:51) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
