--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
        "4         True  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,9 +220,7 @@
   },
   {
    "cell_type": "code",
-
-   "execution_count": 72,
-
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -481,9 +479,7 @@
   },
   {
    "cell_type": "code",
-
-   "execution_count": 74,
-
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -580,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -607,20 +603,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-
-      "[tensor([1.8000e+01, 1.0000e+00, 0.0000e+00, 1.0000e+00, 0.0000e+00, 0.0000e+00,\n",
-      "        4.0000e+00, 0.0000e+00, 0.0000e+00, 0.0000e+00, 0.0000e+00, 0.0000e+00,\n",
-      "        1.0000e+00, 0.0000e+00, 0.0000e+00, 0.0000e+00, 1.0000e+00, 1.0000e+00,\n",
-      "        0.0000e+00, 0.0000e+00, 2.4051e-01, 0.0000e+00, 0.0000e+00, 4.3251e-04,\n",
-      "        0.0000e+00, 1.7943e-01, 0.0000e+00], dtype=torch.float64), tensor([0], dtype=torch.int32)]\n"
-
+      "[tensor([1.0000, 1.0000, 1.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 1.0000,\n",
+      "        0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 1.0000, 0.0000, 1.0000,\n",
+      "        0.0000, 0.0000, 0.4937, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+      "       dtype=torch.float64), tensor([0], dtype=torch.int32)]\n"
      ]
     }
    ],
@@ -718,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -731,8 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -756,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -789,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -857,16 +849,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([0.0552], dtype=torch.float64, grad_fn=<ReluBackward0>)"
+       "tensor([0.], dtype=torch.float64, grad_fn=<ReluBackward0>)"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -879,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -897,8 +889,8 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [29], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m train(model, train_data, test_data)\n",
-      "Cell \u001b[1;32mIn [26], line 31\u001b[0m, in \u001b[0;36mtrain\u001b[1;34m(network, train_data, test_data, test, iter_num)\u001b[0m\n\u001b[0;32m     29\u001b[0m optimizer\u001b[39m.\u001b[39mzero_grad()           \u001b[39m# clear gradient of loss function\u001b[39;00m\n\u001b[0;32m     30\u001b[0m results \u001b[39m=\u001b[39m model(x)              \u001b[39m# calculate predictions\u001b[39;00m\n\u001b[1;32m---> 31\u001b[0m loss \u001b[39m=\u001b[39m criterion(results, y)    \u001b[39m# calculate loss\u001b[39;00m\n\u001b[0;32m     32\u001b[0m loss\u001b[39m.\u001b[39mbackward()                 \u001b[39m# calculate gradient\u001b[39;00m\n\u001b[0;32m     33\u001b[0m optimizer\u001b[39m.\u001b[39mstep()                \u001b[39m# update parameters\u001b[39;00m\n",
+      "Cell \u001b[1;32mIn [16], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m train(network\u001b[39m=\u001b[39;49mmodel, train_data\u001b[39m=\u001b[39;49mtrain_data, test_data\u001b[39m=\u001b[39;49mtest_data)\n",
+      "Cell \u001b[1;32mIn [11], line 32\u001b[0m, in \u001b[0;36mtrain\u001b[1;34m(network, train_data, test_data, test, iter_num)\u001b[0m\n\u001b[0;32m     30\u001b[0m results \u001b[39m=\u001b[39m model(x)              \u001b[39m# calculate predictions\u001b[39;00m\n\u001b[0;32m     31\u001b[0m \u001b[39mprint\u001b[39m(results\u001b[39m.\u001b[39mshape, y\u001b[39m.\u001b[39mshape)\n\u001b[1;32m---> 32\u001b[0m loss \u001b[39m=\u001b[39m criterion(results, y)    \u001b[39m# calculate loss\u001b[39;00m\n\u001b[0;32m     33\u001b[0m loss\u001b[39m.\u001b[39mbackward()                 \u001b[39m# calculate gradient\u001b[39;00m\n\u001b[0;32m     34\u001b[0m optimizer\u001b[39m.\u001b[39mstep()                \u001b[39m# update parameters\u001b[39;00m\n",
       "File \u001b[1;32mc:\\Users\\Lenovo\\anaconda3\\envs\\ML\\lib\\site-packages\\torch\\nn\\modules\\module.py:1190\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[1;34m(self, *input, **kwargs)\u001b[0m\n\u001b[0;32m   1186\u001b[0m \u001b[39m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[0;32m   1187\u001b[0m \u001b[39m# this function, and just call forward.\u001b[39;00m\n\u001b[0;32m   1188\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_pre_hooks \u001b[39mor\u001b[39;00m _global_backward_hooks\n\u001b[0;32m   1189\u001b[0m         \u001b[39mor\u001b[39;00m _global_forward_hooks \u001b[39mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[1;32m-> 1190\u001b[0m     \u001b[39mreturn\u001b[39;00m forward_call(\u001b[39m*\u001b[39m\u001b[39minput\u001b[39m, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n\u001b[0;32m   1191\u001b[0m \u001b[39m# Do not call functions when jit is used\u001b[39;00m\n\u001b[0;32m   1192\u001b[0m full_backward_hooks, non_full_backward_hooks \u001b[39m=\u001b[39m [], []\n",
       "File \u001b[1;32mc:\\Users\\Lenovo\\anaconda3\\envs\\ML\\lib\\site-packages\\torch\\nn\\modules\\loss.py:619\u001b[0m, in \u001b[0;36mBCELoss.forward\u001b[1;34m(self, input, target)\u001b[0m\n\u001b[0;32m    618\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mforward\u001b[39m(\u001b[39mself\u001b[39m, \u001b[39minput\u001b[39m: Tensor, target: Tensor) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m Tensor:\n\u001b[1;32m--> 619\u001b[0m     \u001b[39mreturn\u001b[39;00m F\u001b[39m.\u001b[39;49mbinary_cross_entropy(\u001b[39minput\u001b[39;49m, target, weight\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mweight, reduction\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mreduction)\n",
       "File \u001b[1;32mc:\\Users\\Lenovo\\anaconda3\\envs\\ML\\lib\\site-packages\\torch\\nn\\functional.py:3095\u001b[0m, in \u001b[0;36mbinary_cross_entropy\u001b[1;34m(input, target, weight, size_average, reduce, reduction)\u001b[0m\n\u001b[0;32m   3092\u001b[0m     new_size \u001b[39m=\u001b[39m _infer_size(target\u001b[39m.\u001b[39msize(), weight\u001b[39m.\u001b[39msize())\n\u001b[0;32m   3093\u001b[0m     weight \u001b[39m=\u001b[39m weight\u001b[39m.\u001b[39mexpand(new_size)\n\u001b[1;32m-> 3095\u001b[0m \u001b[39mreturn\u001b[39;00m torch\u001b[39m.\u001b[39;49m_C\u001b[39m.\u001b[39;49m_nn\u001b[39m.\u001b[39;49mbinary_cross_entropy(\u001b[39minput\u001b[39;49m, target, weight, reduction_enum)\n",
@@ -907,7 +899,7 @@
     }
    ],
    "source": [
-    "train(model, train_data, test_data)"
+    "train(network=model, train_data=train_data, test_data=test_data)\n"
    ]
   },
   {
@@ -934,7 +926,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8 | packaged by conda-forge | (main, Nov  4 2022, 13:42:51) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
