--- a/main.ipynb
+++ b/main.ipynb
@@ -922,12 +922,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[tensor([1.0000, 1.0000, 1.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 1.0000,\n",
+       "         0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 1.0000, 0.0000, 1.0000,\n",
+       "         0.0000, 0.0000, 0.4937, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+       "        dtype=torch.float64),\n",
+       " tensor([0], dtype=torch.int32)]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import load_data\n",
-    "train_data, test_data= load_data.load_data()\n",
+    "train_data, test_data= load_data.load_data('train.csv','test.csv','sample_submission.csv')\n",
     "train_data[0]"
    ]
   },
